--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@google/genai": "^1.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "abcjs": "^6.5.2"
+    "abcjs": "^6.5.2",
+    "@vercel/analytics": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
