--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jspdf": "2.5.1",
     "pdfjs-dist": "3.11.174",
     "docx": "8.5.0",
+    "driver.js": "1.3.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/node": "^5.5.13"
   },
